--- a/templates/index.pug
+++ b/templates/index.pug
@@ -2,6 +2,11 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title Hello
+    style.
+      body { font: 16px/1.5 sans-serif; text-align: center; }
+    title /ama
   body
-    = "Hello world"
+    h1 /ama
+    a(href="https://slack.com/oauth/authorize?scope=commands&client_id=#{@client_id}")
+      img(alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x")
+
