--- a/templates/index.pug
+++ b/templates/index.pug
@@ -7,6 +7,12 @@ html
     title /ama
   body
     h1 /ama
-    a(href="https://slack.com/oauth/authorize?scope=commands&client_id=#{@client_id}")
-      img(alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x")
+    = if @auth_done do
+      p
+        strong /ama
+        | has been added to your team
+    - else
+      p
+        a(href="https://slack.com/oauth/authorize?scope=commands&client_id=#{@client_id}")
+          img(alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x")
 
